[gd_scene load_steps=4 format=3 uid="uid://7bbayog7f2xk"]

[ext_resource type="Script" uid="uid://cg3googr6jh5j" path="res://combo_manager.gd" id="1_53542"]
[ext_resource type="AudioStream" uid="uid://bh1uop6magmw" path="res://combo_up.wav" id="2_k233w"]
[ext_resource type="AudioStream" uid="uid://bdganyl21ywxg" path="res://combo_down.wav" id="3_kuuer"]

[node name="ComboManager" type="Node"]
script = ExtResource("1_53542")

[node name="ComboBreakTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="MultiKillTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ComboUpAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_k233w")
volume_db = -4.298

[node name="ComboDownAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_kuuer")
volume_db = -6.876
